--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
+body{
+    margin: 0;
+    box-sizing: border-box;
+}
 .font-raleway{
     font-family: "Raleway", sans-serif;
 }
 .font-inter{
     font-family: "Inter", sans-serif;
+}
+
+.common-color{
+    color: #1DD100;
+}
+
+.banner-container{
+    background-image: url('../images/banner.png');
+    width:1171px;
+    height:550px ;
+    margin: 0px auto;
 }
